--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cfdna"
-version = "2.1.0"
+version = "2.0.5"
 description = "Python package for fragment manipulation for cfDNA"
 authors = ["Kyle S. Smith <kyle.smith@stjude.org>"]
 maintainers = ["Kyle S. Smith <kyle.smith@stjude.org>"]
@@ -43,7 +43,8 @@ seaborn = "^0.12.2"
 projectframe = "^1.0.0"
 hmmCNV = "^1.0.1"
 scikit-learn = "^1.2.2"
-ngsfragments = "^2.0.7"
+ngsfragments = "^2.1.1"
+genome_info = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -56,9 +57,9 @@ requires = ["poetry-core>=1.0.0",
             "setuptools>=65.5.0",
             "ailist>=2.1.0",
             "pysam>=0.20.0",
-            "hg19genome>=1.0.0",
+            "genome_info>=1.0.2",
             "intervalframe>=1.1.3",
-            "ngsfragments>=2.0.7"]
+            "ngsfragments>=2.1.1"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.build]
