--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cfdna"
-version = "2.1.2"
+version = "2.3.2"
 description = "Python package for fragment manipulation for cfDNA"
 authors = ["Kyle S. Smith <kyle.smith@stjude.org>"]
 maintainers = ["Kyle S. Smith <kyle.smith@stjude.org>"]
@@ -28,23 +28,23 @@ packages = [{ include = "cfdna" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-numpy = "^1.23.5"
+numpy = ">=1.23.5"
 cython = "^3.0.0"
 pandas = "^2.0.0"
 ailist = "^2.1.3"
-linear_segment = "^1.1.0"
-pysam = "^0.22.0"
+linear_segment = "^1.2.1"
+pysam = ">=0.22.0"
 intervalframe = "^1.1.5"
 matplotlib = "^3.7.1"
 bokeh = "^3.1.0"
-scipy = "^1.9.1"
-statsmodels = "^0.13.5"
-seaborn = "^0.12.2"
+scipy = ">=1.9.1"
+statsmodels = ">=0.14.0"
+seaborn = ">=0.12.2"
 projectframe = "^1.0.0"
-hmmCNV = "^1.0.1"
+hmmCNV = "^1.1.6"
 scikit-learn = "^1.2.2"
-ngsfragments = "^2.2.0"
-genome_info = "^1.0.4"
+ngsfragments = "^2.4.2"
+genome_info = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -57,9 +57,9 @@ requires = ["poetry-core>=1.0.0",
             "setuptools>=65.5.0",
             "ailist>=2.1.3",
             "pysam>=0.22.0",
-            "genome_info>=1.0.4",
+            "genome_info>=1.0.7",
             "intervalframe>=1.1.5",
-            "ngsfragments>=2.2.0"]
+            "ngsfragments>=2.4.2"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.build]
